--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "postcss-preset-env": "^6.7.0",
     "rimraf": "^3.0.2",
     "sharp": "^0.29.1",
+    "tailwind": "^3.0.0",
     "tailwindcss": "^2.2.19"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  }
 }
